--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com -->
-<!--  Last Published: Mon Feb 27 2017 00:17:34 GMT+0000 (UTC)  -->
+<!--  Last Published: Mon Feb 27 2017 02:03:22 GMT+0000 (UTC)  -->
 <html data-wf-page="5898ee990acce6760a3df83e" data-wf-site="5898ee990acce6760a3df83d" lang="en">
 <head>
   <meta charset="utf-8">
@@ -46,7 +46,7 @@
   <div class="intro-div">
     <div class="ray"></div>
     <div class="intro-copy">
-      <div class="h1">Introduction from Ray</div>
+      <div class="h1">Introduction from Raymond</div>
       <div class="body-copy-large">This is the abbreviated space in which Ray briefly explains what this campaign is all about. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</div>
     </div>
   </div>
