--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com -->
-<!--  Last Published: Mon Feb 27 2017 02:03:22 GMT+0000 (UTC)  -->
+<!--  Last Published: Tue Feb 28 2017 03:44:59 GMT+0000 (UTC)  -->
 <html data-wf-page="5898ee990acce6760a3df83e" data-wf-site="5898ee990acce6760a3df83d" lang="en">
 <head>
   <meta charset="utf-8">
@@ -35,9 +35,11 @@
 <body>
   <div class="full-div">
     <div class="header">
-      <div class="hold-header-logos"><img class="connections-logo" src="images/Connections-Church-logo-red.svg" width="200"><img class="here-for-good-logo" src="images/HereForGood_logo.svg">
+      <div class="hold-header-logos">
+        <a class="w-inline-block" href="http://www.connectionschurchramsey.com/home"><img class="connections-logo" src="images/Connections-Church-logo-red.svg" width="200">
+        </a><img class="here-for-good-logo" src="images/HereForGood_logo.svg">
       </div>
-      <div class="fill"></div><a class="button-header donate-button-small w-button" data-ix="button-hover" href="https://connectionschurch.cloverdonations.com/giving">Give a Donation</a>
+      <div class="fill"></div><a class="button-header donate-button-small w-button" data-ix="button-hover" href="https://connectionschurch.cloverdonations.com/giving">Make a Donation</a>
     </div>
     <div class="hero-middle"><img class="circle-graph" src="images/circle-graph.svg">
       <div class="updated">(updated 2.14.17)</div><img class="timeline" src="images/timeline.svg">
@@ -57,49 +59,49 @@
   </div>
   <div class="h1 updates-headline">updates</div>
   <div class="updates-div">
-    <a class="featured-update w-inline-block" data-ix="updates-hover-reveal" href="first-post.html">
+    <a class="featured-update w-inline-block" href="first-post.html">
       <div class="gradient">
         <div class="posted-date">Posted: 4.12.17</div>
-        <div class="h2">Latest post headline here</div>
+        <div class="h2">Latest post headline goes right here</div>
         <div class="body-copy-small">This is some text inside of a div block. You can type as much as you want here but if it is a longer article you should keep it to two or three lines of length, as anything else is too much space.</div>
       </div>
     </a>
-    <a class="regular-update w-inline-block" data-ix="updates-hover-reveal" href="first-post.html">
-      <div class="gradient">
-        <div class="posted-date">Posted: 4.12.17</div>
-        <div class="h2">next Latest post headline goes here</div>
-        <div class="body-copy-small">This is some text inside of a div block. You can type as much as you want here but if it is a longer article you should keep it to two or three lines of length, as anything else is too much space.</div>
-      </div>
-    </a>
-    <a class="regular-update update-2 w-inline-block" data-ix="updates-hover-reveal" href="first-post.html">
+    <a class="regular-update w-inline-block" href="first-post.html">
       <div class="gradient">
         <div class="posted-date">Posted: 4.12.17</div>
         <div class="h2">next Latest post headline goes here</div>
         <div class="body-copy-small">This is some text inside of a div block. You can type as much as you want here but if it is a longer article you should keep it to two or three lines of length, as anything else is too much space.</div>
       </div>
     </a>
-    <a class="regular-update update-3 w-inline-block" data-ix="updates-hover-reveal" href="first-post.html">
+    <a class="regular-update update-2 w-inline-block" href="first-post.html">
       <div class="gradient">
         <div class="posted-date">Posted: 4.12.17</div>
         <div class="h2">next Latest post headline goes here</div>
         <div class="body-copy-small">This is some text inside of a div block. You can type as much as you want here but if it is a longer article you should keep it to two or three lines of length, as anything else is too much space.</div>
       </div>
     </a>
-    <a class="regular-update update-4 w-inline-block" data-ix="updates-hover-reveal" href="first-post.html">
+    <a class="regular-update update-3 w-inline-block" href="first-post.html">
       <div class="gradient">
         <div class="posted-date">Posted: 4.12.17</div>
         <div class="h2">next Latest post headline goes here</div>
         <div class="body-copy-small">This is some text inside of a div block. You can type as much as you want here but if it is a longer article you should keep it to two or three lines of length, as anything else is too much space.</div>
       </div>
     </a>
-    <a class="regular-update update-5 w-inline-block" data-ix="updates-hover-reveal" href="first-post.html">
+    <a class="regular-update update-4 w-inline-block" href="first-post.html">
       <div class="gradient">
         <div class="posted-date">Posted: 4.12.17</div>
         <div class="h2">next Latest post headline goes here</div>
         <div class="body-copy-small">This is some text inside of a div block. You can type as much as you want here but if it is a longer article you should keep it to two or three lines of length, as anything else is too much space.</div>
       </div>
     </a>
-    <a class="regular-update update-6 w-inline-block" data-ix="updates-hover-reveal" href="first-post.html">
+    <a class="regular-update update-5 w-inline-block" href="first-post.html">
+      <div class="gradient">
+        <div class="posted-date">Posted: 4.12.17</div>
+        <div class="h2">next Latest post headline goes here</div>
+        <div class="body-copy-small">This is some text inside of a div block. You can type as much as you want here but if it is a longer article you should keep it to two or three lines of length, as anything else is too much space.</div>
+      </div>
+    </a>
+    <a class="regular-update update-6 w-inline-block" href="first-post.html">
       <div class="gradient">
         <div class="posted-date">Posted: 4.12.17</div>
         <div class="h2">next Latest post headline goes here</div>
@@ -174,21 +176,21 @@
       <div class="h1 testimonial-headline">testimonials</div>
     </div>
     <div class="testimonail-lower">
-      <div class="testimonial-module" data-ix="scroll-reveal">
+      <div class="testimonial-module" data-ix="hover-move-up-slightly">
         <div class="testimonial-image"></div>
         <div class="testimonial-copy-hold">
           <div class="h2 testimonial-name">John Smith</div>
           <p class="updates-body-copy">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique...</p><a class="button-small w-button" data-ix="button-hover" href="first-testimonial.html">READ MORE</a>
         </div>
       </div>
-      <div class="testimonial-module" data-ix="scroll-reveal-2">
+      <div class="testimonial-module" data-ix="hover-move-up-slightly">
         <div class="test-image-2 testimonial-image"></div>
         <div class="testimonial-copy-hold">
           <div class="h2 testimonial-name">joe Smith</div>
           <p class="updates-body-copy">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique...</p><a class="button-small w-button" data-ix="button-hover" href="third-testimonial.html">READ MORE</a>
         </div>
       </div>
-      <div class="testimonial-module" data-ix="scroll-reveal-3">
+      <div class="testimonial-module" data-ix="hover-move-up-slightly">
         <div class="test-image-3 testimonial-image"></div>
         <div class="testimonial-copy-hold">
           <div class="h2 testimonial-name">jane Smith</div>
@@ -248,21 +250,27 @@
   <div class="faqs-section">
     <div class="faqs-container w-container">
       <div class="faqs-headline h1">FAQs</div>
-      <div class="faqs-question">So what is the deal with the thing I have a question about right now?</div>
-      <p class="faqs-answer">Well the answer is lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
-      <div class="faqs-question">So what is the deal with the other thing I have a question about and I came here specifically to find out?</div>
-      <p class="faqs-answer">Well the answer is lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
-      <div class="faqs-question">So what is the deal with the thing I have a question about right now?</div>
-      <p class="faqs-answer">Well the answer is lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
-      <div class="faqs-question">So what is the deal with the thing I have a question about right now?</div>
-      <p class="faqs-answer">Well the answer is lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
-      <div class="faqs-question">So what is the deal with the thing I have a question about right now?</div>
-      <p class="faqs-answer">Well the answer is lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+      <div class="faqs-question">When we say we want to serve and stay in the Ramsey area – how far away from our current location are we willing to go?</div>
+      <p class="faqs-answer">We are trying to stay within a 5 mile radius of Ramsey Elementary.</p>
+      <div class="faqs-question">What options are on the table for a permanent site?</div>
+      <p class="faqs-answer">We see two options currently available to us; purchase an existing building and renovate as needed or purchase land to build on at a later time.</p>
+      <div class="faqs-question">Would Connections Church consider taking out a loan in order to remodel or purchase land if not enough funds are raised in the campaign?</div>
+      <p class="faqs-answer">Although we can’t rule out taking on debt, we are absolutely committed to taking on as little debt as possible.</p>
+      <div class="faqs-question">There seems to be many buildings for lease or sale in the Ramsey area – why aren’t they viable options for us?</div>
+      <p class="faqs-answer">To date, we have looked at all available spaces for sale in Ramsey and none are viable options primarily due to square footage, the extent of renovation required to add adequate plumbing/bathrooms for a church or inadequate parking space. We continue to work with a realtor and the City of Ramsey to explore buildings that are listed for sale. The first line refers to property for lease and the second sentence refers to property for sale. Do we want these to be consistent?</p>
+      <div class="faqs-question">Would we ever consider leasing a different space?</div>
+      <p class="faqs-answer">At this time, we feel our resources are best spend on a permanent solution. We are open to creative solutions such as leasing-to-own, but we don’t want to simple move to a new location that has us leasing with no long-term outcome like we have now at the school.</p>
+      <div class="faqs-question">How concerned should we be that Eagle Brook Church is opening a campus only a few miles away from Ramsey?</div>
+      <p class="faqs-answer">Eagle Brook Church is in our denomination and has been a great partner with us. Pastor Ray recently participated in their two-year Pastor’s Leadership Cohort training. We are excited about their new launch and will partner with them in reaching our community for Christ. A large church like this will be able to reach some people we cannot and Connections will be able to reach people Eagle Brook cannot. They are going to be a great neighbor.</p>
+      <div class="faqs-question">When other churches have moved from a rented facility to a permanent home, what growth have they seen as a result?</div>
+      <p class="faqs-answer">In our church planting network, churches have typically seen 20%-30% growth in their Sunday service attendance. This also translates to growth in their children and student areas as well.</p>
+      <div class="faqs-question">How much money are we expecting to raise?</div>
+      <p class="faqs-answer">Our goal is to raise between $500,000 - $700,000 over a three-year period.</p>
     </div>
   </div>
   <div class="donate-section">
     <div class="donate-container w-container" data-ix="scroll-reveal">
-      <div class="donate-headline h1">join god's work</div><a class="donate-button-small donate-large w-button" data-ix="button-hover" href="https://connectionschurch.cloverdonations.com/giving">Give a Donation</a>
+      <div class="donate-headline h1">join god's work</div><a class="donate-button-small donate-large w-button" data-ix="button-hover" href="https://connectionschurch.cloverdonations.com/giving">Make a Donation</a>
     </div>
   </div>
   <div class="contact-section">
