--- a/second-testimonial.html
+++ b/second-testimonial.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com -->
-<!--  Last Published: Mon Feb 27 2017 02:03:22 GMT+0000 (UTC)  -->
+<!--  Last Published: Tue Feb 28 2017 03:44:59 GMT+0000 (UTC)  -->
 <html data-wf-page="58b202f6ddad4bdd212f94cd" data-wf-site="5898ee990acce6760a3df83d" lang="en">
 <head>
   <meta charset="utf-8">
@@ -35,9 +35,11 @@
 </head>
 <body>
   <div class="header">
-    <div class="hold-header-logos"><img class="connections-logo" src="images/Connections-Church-logo-red.svg" width="200"><img class="here-for-good-logo" src="images/HereForGood_logo.svg">
+    <div class="hold-header-logos">
+      <a class="w-inline-block" href="http://www.connectionschurchramsey.com/home"><img class="connections-logo" src="images/Connections-Church-logo-red.svg" width="200">
+      </a><img class="here-for-good-logo" src="images/HereForGood_logo.svg">
     </div>
-    <div class="fill"></div><a class="button-header donate-button-small w-button" data-ix="button-hover" href="https://connectionschurch.cloverdonations.com/giving">Give a Donation</a>
+    <div class="fill"></div><a class="button-header donate-button-small w-button" data-ix="button-hover" href="https://connectionschurch.cloverdonations.com/giving">Make a Donation</a>
   </div>
   <div class="blog-hero jane-blog-post-hero">
     <h1 class="blog-headline">Jane Doe</h1>
